--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://OrdinaryDeveloper2022.github.io/react_quiz",
+  "homepage": "https:AkshayWalvekar15//.github.io/react_quiz/QuizApp",
   "name": "quiz",
   "version": "0.1.0",
   "private": true,
