--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AkshayWalvekar15.github.io/react_quiz/quizapp",
+  "homepage": "https://AkshayWalvekar15.github.io/quizapp",
   "name": "quiz",
   "version": "0.1.0",
   "private": true,
